# pikiwidb

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  README_CN.md  build.sh  consistency_test.sh  pikiwidb.conf  save_load.sh
.github/ISSUE_TEMPLATE/: 3-docs-bug.yaml  bug-report.md  enhancement.md
.github/workflows/: pikiwidb.yml  release.yml
build_support/: run_clang_format.py
ci/: build.sh
cmake/: boost.cmake  braft.cmake  brpc.cmake  double-conversion.cmake  findTools.cmake  fmt.cmake  folly.cmake  gflags.cmake  glog.cmake  gtest.cmake  leveldb.cmake  libevent.cmake  llhttp.cmake  lz4.cmake  openssl.cmake  protobuf.cmake  rocksdb.cmake  snappy.cmake  spdlog.cmake  tbb.cmake  unwind.cmake  utils.cmake  zlib.cmake  zstd.cmake
cmake/modules/braft/: Findbrpc.cmake
cmake/modules/brpc/: Findgflags.cmake
cmake/modules/glog/: FindUnwind.cmake  Findgflags.cmake
cmake/modules/spdlog/: fmtConfig.cmake
cmake/patches/: folly_coroutine.patch  glog_demangle.patch
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  base_cmd.cc  base_cmd.h  checkpoint_manager.cpp  checkpoint_manager.h  client.cc  client.h  cmake_install.cmake  cmd_admin.cc  cmd_admin.h  cmd_hash.cc  cmd_hash.h  cmd_keys.cc  cmd_keys.cpp  cmd_keys.h  cmd_kv.cc  cmd_kv.h  cmd_list.cc  cmd_list.h  cmd_raft.cc  cmd_raft.h  cmd_set.cc  cmd_set.h  cmd_table_manager.cc  cmd_table_manager.h  cmd_thread_pool.cc  cmd_thread_pool.h  cmd_thread_pool_worker.cc  cmd_thread_pool_worker.h  cmd_zset.cc  cmd_zset.h  command.cc  command.h  common.cc  common.h  config.cc  config.h  crc64.c  (+45 more)
src/counter/: CMakeLists.txt  client.cpp  counter.pb.cc  counter.pb.h  server.cpp
src/net/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config_parser.cc  config_parser.h  event_loop.cc  event_loop.h  event_obj.h  http_client.cc  reactor.h  tcp_connection.cc  tcp_connection.h  unbounded_buffer.cc  unbounded_buffer.h  util.h
src/net/lzf/: lzf.h  lzf_c.c  lzf_d.c  lzfp.h
src/praft/: CMakeLists.txt  binlog.proto  praft.cc  praft.h  praft.proto
src/pstd/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  env.cc  env.h  lock_mgr.cc  lock_mgr.h  memory_file.cc  memory_file.h  mutex.h  mutex_impl.cc  mutex_impl.h  noncopyable.h  pikiwidb_codis_slot.cc  pikiwidb_codis_slot.h  pikiwidb_slot.cc  pikiwidb_slot.h  pstd_coding.cc  pstd_coding.h  pstd_defer.h  pstd_hash.cc  pstd_hash.h  pstd_mutex.h  pstd_status.cc  pstd_status.h  pstd_string.cc  pstd_string.h  pstd_util.cc  pstd_util.h  scope_record_lock.cc  scope_record_lock.h  slice.h  status.cc  status.h  thread_pool.cc  thread_pool.h
src/pstd/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pstd_string_test.cc  pstd_string_test[1]_include.cmake  pstd_util_test.cc  pstd_util_test[1]_include.cmake
src/storage/: CMakeLists.txt
src/storage/include/storage/: backupable.h  binlog.h  build_version.h  db_checkpoint.h  log_queue.h  slot_indexer.h  storage.h  storage_define.h  util.h  version.h
src/storage/src/: base_data_key_format.h  base_data_value_format.h  base_filter.h  base_key_format.h  base_meta_value_format.h  base_value_format.h  batch.h  binlog.cc  binlog.h  binlog.proto  binlog_helper.h  coding.h  custom_comparator.h  db_checkpoint.cc  debug.h  lists_data_key_format.h  lists_filter.h  lists_meta_value_format.h  lock_mgr.h  log_index.cc  log_index.cpp  log_index.h  log_queue.h  lru_cache.h  murmurhash.h  mutex.h  mutex_impl.h  options_helper.h  redis.cc  redis.h  redis_hashes.cc  redis_hashes.h  redis_hyperloglog.h  redis_lists.cc  redis_lists.h  redis_sets.cc  redis_sets.h  redis_strings.cc  redis_strings.h  redis_zsets.cc  (+12 more)
src/storage/tests/: CMakeLists.txt  binlog_test.cc  custom_comparator_test.cc  hash_test.cc  hashes_test.cc  hyperloglog_test.cc  keys_test.cc  kv_format_test.cc  lists_filter_test.cc  lists_test.cc  lock_mgr_test.cc  log_index_test.cc  lru_cache_test.cc  options_test.cc  sets_test.cc  strings_filter_test.cc  strings_test.cc  zsets_test.cc
src/storage/tests/benchmark/: CMakeLists.txt  binlog_benchmark.cc
tests/: admin_test.go  go.mod  go.sum  hash_test.go  key_test.go  list_test.go  pikiwidb_suite_test.go  raft_test.cc  set_test.go  string_test.go  zset_test.go
tests/counter/: CMakeLists.txt
tests/util/: pikiwidb.go
