
AUX_SOURCE_DIRECTORY(. STD_SRC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_LIBRARY(pstd ${STD_SRC})

TARGET_INCLUDE_DIRECTORIES(pstd PRIVATE ${rocksdb_SOURCE_DIR}/include)

TARGET_LINK_LIBRARIES(pstd; spdlog pthread glog rocksdb)

SET_TARGET_PROPERTIES(pstd PROPERTIES LINKER_LANGUAGE CXX)
