#AUX_SOURCE_DIRECTORY(./src STORAGE_SRC)
FILE(GLOB STORAGE_SRC
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/storage/*.h"
        )
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_LIBRARY(storage ${STORAGE_SRC})

TARGET_INCLUDE_DIRECTORIES(storage
        PUBLIC ${CMAKE_SOURCE_DIR}/src
        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
        PRIVATE ${rocksdb_SOURCE_DIR}/
        )

TARGET_LINK_LIBRARIES(storage pstd glog rocksdb)

SET_TARGET_PROPERTIES(storage PROPERTIES LINKER_LANGUAGE CXX)
