FILE(GLOB BINLOG_PROTO
        "${CMAKE_CURRENT_SOURCE_DIR}/src/binlog.proto"
)
EXECUTE_PROCESS(
        COMMAND ${PROTOBUF_PROTOC} --cpp_out=${CMAKE_CURRENT_SOURCE_DIR}/src -I${CMAKE_CURRENT_SOURCE_DIR}/src ${BINLOG_PROTO}
)

FILE(GLOB STORAGE_SRC
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/storage/*.h"
        )
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_LIBRARY(storage ${STORAGE_SRC})

TARGET_INCLUDE_DIRECTORIES(storage
        PUBLIC ${CMAKE_SOURCE_DIR}/src
        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
        PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
        PRIVATE ${rocksdb_SOURCE_DIR}
        PRIVATE ${rocksdb_SOURCE_DIR}/include
        PRIVATE ${PROTOBUF_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES(storage pstd glog rocksdb ${PROTOBUF_LITE_LIBRARY})

SET_TARGET_PROPERTIES(storage PROPERTIES LINKER_LANGUAGE CXX)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/tests)
