CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

INCLUDE(GoogleTest)

FILE(GLOB_RECURSE TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*test.cc")

FOREACH (TEST_SOURCE ${TEST_SOURCES})
  GET_FILENAME_COMPONENT(TEST_FILENAME ${TEST_SOURCE} NAME)
  STRING(REPLACE ".cc" "" TEST_NAME ${TEST_FILENAME})

  ADD_EXECUTABLE(${TEST_NAME} ${TEST_SOURCE})

  TARGET_INCLUDE_DIRECTORIES(${TEST_NAME}
    PUBLIC storage
    PRIVATE ${rocksdb_SOURCE_DIR}/include
  )
  TARGET_LINK_LIBRARIES(${TEST_NAME} 
    PUBLIC storage
    PRIVATE gtest
    PRIVATE gtest_main
    PRIVATE fmt
  )
ENDFOREACH()
